<resources>
    <string name="SingUp">SIGN-UP</string>
    <string name="eng1">how many letters in english alphabet?</string>
    <string name="eng2">23</string>
    <string name="eng3">26</string>
    <string name="eng4">24</string>
    <string name="eng5">25</string>

    <string name="en1">what is the different word?</string>
    <string name="en2">grey</string>
    <string name="en3">orange</string>
    <string name="en4">silver</string>
    <string name="en5">mouse</string>

    <string name="e1">which one is the most suitable?</string>
    <string name="e2">we are played cricket</string>
    <string name="e3">i asked him that</string>
    <string name="e4">you are ate rice</string>
    <string name="e5">i is drink water</string>
    <string name="a">SmartBrain</string>
    <string name="b">your score</string>
    <string name="c">question 01</string>
    <string name="d">10</string>
    <string name="e">PREVIOUS</string>
    <string name="f">NEXT</string>

    <string name="g">NAME</string>
    <string name="h">E MAIL</string>
    <string name="i">PASSWORD</string>
    <string name="j">RE-ENTER PASSWORD</string>
    <string name="k">SIGN-IN</string>

    <string name="question">How many times would the digit, 2, be written if you wrote down all the whole numbers from 1 to 100? </string>
    <string name="checkbox1">10</string>
    <string name="checkbox2">11</string>
    <string name="checkbox3">19</string>
    <string name="checkbox4">20</string>
    <string name="easyy">(10,000 / 50) * 5</string>
    <string name="check1">100</string>
    <string name="check2">1000</string>
    <string name="check3">2000</string>
    <string name="check4">40</string>
    <string name="easy">(625 / ___ = 25)</string>
    <string name="chec1">25</string>
    <string name="chec2">625</string>
    <string name="chec3">1</string>
    <string name="chec4">250</string>
    <string name="app_name">Smart Brain</string>


    <string name="EnglishBtn">English</string>
    <string name="MathematicsBtn">Mathematics</string>
    <string name="ScienceBtn">Science</string>
    <string name="HistoryBtn">History</string>
    <string name="Answer3">03 Answer</string>
    <string name="Homebtn">Home</string>
    <string name="topic">Smart Brain</string>
    <string name="hardbtn">HARD</string>
    <string name="Answer2">02 Answer</string>
    <string name="easybtn">EASY</string>
    <string name="mediambtn">MEDIAM</string>
    <string name="score">Score</string>
    <string name="quesNo">Question 01</string>
    <string name="Answer1">01 Answer</string>
    <string name="nextbtn">Next</string>
    <string name="quesNo2">Question 02</string>
    <string name="Answer4">04 Answer</string>
    <string name="question1">who is the prime minister of sri lanka</string>
    <string name="question2">who is the president of sri lanka</string>
    <string name="playbtn">Play</string>
    <string name="Exitbtn">Exit</string>
</resources>
